Added full site files

--- a/ndex.html
+++ b/ndex.html
@@ -50,12 +50,11 @@
 </head>
 <body>
 <div class="container">
-<img alt="AnchorStack Logo" src="images/Logo.png" style="max-width:220px; margin-bottom: 1rem;"/>
-<h1>Build Better. Stack Smarter.</h1>
-<p>You don’t need more tools. You need the *right* ones — layered intentionally, delivered clearly, and built to last.</p>
-<a class="button" href="vault.html">Enter the Vault</a>
-<a class="button" href="about.html">About AnchorStack</a>
-<p style="margin-top: 2rem;">Clarity. Momentum. Creation — without the noise. The anchor in the storm. This is your stack.</p>
+<h1>AnchorStack</h1>
+<p>Tools for creators who want to build better, not busier.</p>
+<a class="button" href="vault.html">Explore the Vault</a>
+<a class="button" href="subscribe.html">Join the Mission</a>
+<p style="margin-top: 2rem;">Clarity. Momentum. Creation — without the noise.</p>
 </div>
 </body>
 </html>
