--- a/vault_tiered.html
+++ b/vault_tiered.html
@@ -14,7 +14,7 @@
 
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Home – AnchorStack</title>
+<title>Vault – AnchorStack</title>
 <style>
         body {
             font-family: sans-serif;
@@ -51,11 +51,25 @@
 <body>
 <div class="container">
 <img alt="AnchorStack Logo" src="images/Logo.png" style="max-width:220px; margin-bottom: 1rem;"/>
-<h1>Build Better. Stack Smarter.</h1>
-<p>You don’t need more tools. You need the *right* ones — layered intentionally, delivered clearly, and built to last.</p>
-<a class="button" href="vault.html">Enter the Vault</a>
-<a class="button" href="about.html">About AnchorStack</a>
-<p style="margin-top: 2rem;">Clarity. Momentum. Creation — without the noise. The anchor in the storm. This is your stack.</p>
+<h1>The AnchorStack Vault</h1>
+<p>Curated resources, organized for clarity:</p>
+<div style="margin: 2rem 0;">
+<a class="button" href="#free">Free</a>
+<a class="button" href="#midrange">Midrange</a>
+<a class="button" href="#top">Top Tier</a>
+</div>
+<div id="free">
+<h2>🆓 Free</h2>
+<p>Quick-start guides, habit stackers, and printable clarity tools.</p>
+</div>
+<div id="midrange">
+<h2>💡 Midrange</h2>
+<p>Deep-dive clarity kits and productivity systems with real traction.</p>
+</div>
+<div id="top">
+<h2>🚀 Top Tier</h2>
+<p>Premium creator bundles, master toolkits, and strategic templates.</p>
+</div>
 </div>
 </body>
 </html>
