--- a/about.html
+++ b/about.html
@@ -48,5 +48,11 @@
     <p><a href="subscribe.html">Join the mission</a> and be part of the clarity-driven revolution.</p>
     
     </div>
+<div style="text-align: center; margin-top: 2rem;">
+  <a href="index.html" style="background: #007bff; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px;">
+    ← Return to AnchorStack Home
+  </a>
+</div>
+
 </body>
 </html>
