--- a/about.html
+++ b/about.html
@@ -40,7 +40,9 @@
 <body>
     <div class="container">
         
-    <img src="images/Logo.png" alt="AnchorStack Logo" style="max-width:200px; margin-bottom: 1rem;">
+   <a href="index.html">
+  <img src="images/Logo.png" alt="AnchorStack Logo" style="max-width:220px; margin-bottom: 1rem;" />
+</a>
     <h1>About AnchorStack</h1>
     <p>AnchorStack was created for content creators, solopreneurs, and digital rebels who are done with burnout and ready to build something that lasts.</p>
     <p>Founded by <strong>Ricky Jarnagin</strong>, this vault is more than a product shelf — it's a clarity-powered roadmap to help creators cut the noise, own their time, and ship what matters.</p>
