Made logo clickable on about page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 </head>
 <body>
 <div class="container">
-<img alt="AnchorStack Logo" src="images/Logo.png" style="max-width:220px; margin-bottom: 1rem;"/>
+<a href="index.html">
+  <img src="images/Logo.png" alt="AnchorStack Logo" style="max-width:220px; margin-bottom: 1rem;" />
+</a>
 <h1>Build Better. Stack Smarter.</h1>
 <p>You don’t need more tools. You need the *right* ones — layered intentionally, delivered clearly, and built to last.</p>
 <a class="button" href="vault.html">Enter the Vault</a>
