Added SEO and Open Graph meta tags to all pages

--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 
 <html lang="en">
 <head>
+<meta property="og:title" content="AnchorStack – Clarity Kits & Tools for Creators">
+<meta property="og:description" content="Curated momentum tools and digital product kits that help creators focus, launch, and grow — without the noise.">
+<meta property="og:image" content="https://anchorstack.pro/images/Logo.png">
+<meta property="og:url" content="https://anchorstack.pro">
+<meta name="twitter:card" content="summary_large_image">
+
 <!-- Google tag (gtag.js) -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
+<link rel="icon" type="image/png" href="favicon.png">
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
