--- a/subscribe.html
+++ b/subscribe.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta property="og:title" content="AnchorStack – Clarity Kits & Tools for Creators">
+<meta property="og:description" content="Curated momentum tools and digital product kits that help creators focus, launch, and grow — without the noise.">
+<meta property="og:image" content="https://anchorstack.pro/images/Logo.png">
+<meta property="og:url" content="https://anchorstack.pro">
+<meta name="twitter:card" content="summary_large_image">
+
+<meta name="description" content="AnchorStack: Tools, templates, and clarity kits for creators, thinkers, and focused doers. Curated digital momentum, one product at a time.">
+<meta name="author" content="Ricky Jarnagin">
+<meta name="keywords" content="AnchorStack, digital products, creator tools, clarity kits, hustle, Notion templates, product launch, focus, productivity">
+
+<link rel="icon" type="image/png" href="favicon.png">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subscribe – AnchorStack</title>
@@ -38,6 +50,8 @@
     </style>
 </head>
 <body>
+
+
     <div class="container">
         
     <h1>Join the AnchorStack List</h1>
@@ -46,5 +60,11 @@
     <p style="margin-top: 2rem;">Built for creators who want momentum, not noise.</p>
     
     </div>
+<div style="text-align: center; margin-top: 2rem;">
+  <a href="index.html" style="background: #007bff; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px;">
+    ← Return to AnchorStack Home
+  </a>
+</div>
+
 </body>
 </html>
