--- a/about.html
+++ b/about.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta property="og:title" content="AnchorStack – Clarity Kits & Tools for Creators">
+<meta property="og:description" content="Curated momentum tools and digital product kits that help creators focus, launch, and grow — without the noise.">
+<meta property="og:image" content="https://anchorstack.pro/images/Logo.png">
+<meta property="og:url" content="https://anchorstack.pro">
+<meta name="twitter:card" content="summary_large_image">
+
+<meta name="description" content="AnchorStack: Tools, templates, and clarity kits for creators, thinkers, and focused doers. Curated digital momentum, one product at a time.">
+<meta name="author" content="Ricky Jarnagin">
+<meta name="keywords" content="AnchorStack, digital products, creator tools, clarity kits, hustle, Notion templates, product launch, focus, productivity">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About – AnchorStack</title>
+<link rel="icon" type="image/png" href="favicon.png">
+
     <style>
         body {
             font-family: sans-serif;
