--- a/free.html
+++ b/free.html
@@ -2,8 +2,26 @@
 
 <html lang="en">
 <head>
+<meta property="og:title" content="AnchorStack – Clarity Kits & Tools for Creators">
+<meta property="og:description" content="Curated momentum tools and digital product kits that help creators focus, launch, and grow — without the noise.">
+<meta property="og:image" content="https://anchorstack.pro/images/Logo.png">
+<meta property="og:url" content="https://anchorstack.pro">
+<meta name="twitter:card" content="summary_large_image">
+
+<meta property="og:title" content="AnchorStack – Clarity Kits & Tools for Creators">
+<meta property="og:description" content="Curated momentum tools and digital product kits that help creators focus, launch, and grow — without the noise.">
+<meta property="og:image" content="https://anchorstack.pro/images/Logo.png">
+<meta property="og:url" content="https://anchorstack.pro">
+<meta name="twitter:card" content="summary_large_image">
+
+<meta name="description" content="AnchorStack: Tools, templates, and clarity kits for creators, thinkers, and focused doers. Curated digital momentum, one product at a time.">
+<meta name="author" content="Ricky Jarnagin">
+<meta name="keywords" content="AnchorStack, digital products, creator tools, clarity kits, hustle, Notion templates, product launch, focus, productivity">
+
 <!-- Google tag (gtag.js) -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
+<link rel="icon" type="image/png" href="favicon.png">
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -147,5 +165,11 @@ function filterTier(tier) {
   });
 }
 </script>
+<div style="text-align: center; margin-top: 2rem;">
+  <a href="index.html" style="background: #007bff; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px;">
+    ← Return to AnchorStack Home
+  </a>
+</div>
+
 </body>
 </html>
