--- a/mid.html
+++ b/mid.html
@@ -2,6 +2,16 @@
 
 <html lang="en">
 <head>
+<meta property="og:title" content="AnchorStack – Clarity Kits & Tools for Creators">
+<meta property="og:description" content="Curated momentum tools and digital product kits that help creators focus, launch, and grow — without the noise.">
+<meta property="og:image" content="https://anchorstack.pro/images/Logo.png">
+<meta property="og:url" content="https://anchorstack.pro">
+<meta name="twitter:card" content="summary_large_image">
+
+<meta name="description" content="AnchorStack: Tools, templates, and clarity kits for creators, thinkers, and focused doers. Curated digital momentum, one product at a time.">
+<meta name="author" content="Ricky Jarnagin">
+<meta name="keywords" content="AnchorStack, digital products, creator tools, clarity kits, hustle, Notion templates, product launch, focus, productivity">
+
 <!-- Google tag (gtag.js) -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
 <script>
@@ -14,6 +24,8 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta charset="utf-8"/>
 <title>AnchorStack Product Tiles</title>
+<link rel="icon" type="image/png" href="favicon.png">
+
 <style>
         body {
             font-family: sans-serif;
@@ -144,5 +156,11 @@ function filterTier(tier) {
   });
 }
 </script>
+<div style="text-align: center; margin-top: 2rem;">
+  <a href="index.html" style="background: #007bff; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px;">
+    ← Return to AnchorStack Home
+  </a>
+</div>
+
 </body>
 </html>
