--- a/vault.html
+++ b/vault.html
@@ -2,8 +2,24 @@
 
 <html lang="en">
 <head>
+<meta property="og:title" content="AnchorStack – Clarity Kits & Tools for Creators">
+<meta property="og:description" content="Curated momentum tools and digital product kits that help creators focus, launch, and grow — without the noise.">
+<meta property="og:image" content="https://anchorstack.pro/images/Logo.png">
+<meta property="og:url" content="https://anchorstack.pro">
+<meta name="twitter:card" content="summary_large_image">
+
+<meta name="description" content="AnchorStack: Tools, templates, and clarity kits for creators, thinkers, and focused doers. Curated digital momentum, one product at a time.">
+<meta name="author" content="Ricky Jarnagin">
+<meta name="keywords" content="AnchorStack, digital products, creator tools, clarity kits, hustle, Notion templates, product launch, focus, productivity">
+
+<meta name="description" content="AnchorStack: Tools, templates, and clarity kits for creators, thinkers, and focused doers. Curated digital momentum, one product at a time.">
+<meta name="author" content="Ricky Jarnagin">
+<meta name="keywords" content="AnchorStack, digital products, creator tools, clarity kits, hustle, Notion templates, product launch, focus, productivity">
+
 <!-- Google tag (gtag.js) -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
+<link rel="icon" type="image/png" href="favicon.png">
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -49,7 +65,7 @@
   margin-bottom: 0.75rem;
 }
 
-        }
+        
         .link {
             text-decoration: none;
             color: white;
@@ -121,10 +137,11 @@
 
 <div style="text-align:center; margin-bottom: 2rem;">
 <h2>What are you looking for today?</h2>
-<a class="button" href="free.html">🆓 Free</a>
-<a class="button" href="mid.html">💡 Midrange</a>
-<a class="button" href="top.html">🚀 Top Tier</a>
-<a class="button" href="vault.html">🔄 Show All</a>
+<a class="vault-button" href="free.html">🆓 Free</a>
+<a class="vault-button" href="mid.html">💡 Midrange</a>
+<a class="vault-button" href="top.html">🚀 Top Tier</a>
+<a class="vault-button" href="vault.html">🔄 Show All</a>
+
 </div>
 
 <div style="height: 2rem;"></div><div class="vault-grid"><h2 style="margin-top: 3rem; margin-bottom: 1rem; text-align: center; color: #00BFFF; border-bottom: 1px solid #ccc; padding-bottom: 0.5rem;">🆓 Free Resources</h2><div class="tier-section"><a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/msenf?utm_source=vault&amp;utm_medium=web&amp;utm_campaign=launch" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
@@ -149,6 +166,11 @@
 <img alt="Digital Clarity Kit (Blueprint)" src="images/digital-clarity-kit.jpg"/>
 <h3>Digital Clarity Kit (Blueprint)</h3><p class="price">$199</p>
 </a></div></div>
+<div style="text-align: center; margin-top: 2rem;">
+  <a href="index.html" style="background: #007bff; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px;">
+    ← Return to AnchorStack Home
+  </a>
+</div>
 
 </body>
 </html>
