Final vault polish: filter buttons, JS hook, style match

--- a/vault.html
+++ b/vault.html
@@ -134,13 +134,14 @@
 </head>
 <body><div class="hero-logo"><img alt="AnchorStack Logo" src="images/Logo.png"/></div>
 <h1>AnchorStack Product Vault</h1>
-
+  <img src="images/Logo.png" alt="AnchorStack Logo" style="max-width:220px; margin-bottom: 1rem;" />
 <div style="text-align:center; margin-bottom: 2rem;">
 <h2>What are you looking for today?</h2>
-<a class="vault-button" href="free.html">🆓 Free</a>
-<a class="vault-button" href="mid.html">💡 Midrange</a>
-<a class="vault-button" href="top.html">🚀 Top Tier</a>
-<a class="vault-button" href="vault.html">🔄 Show All</a>
+<button class="button" onclick="filterTier('free')">🆓 Free</button>
+<button class="button" onclick="filterTier('mid')">💡 Midrange</button>
+<button class="button" onclick="filterTier('top')">🚀 Top Tier</button>
+<button class="button" onclick="filterTier('all')">🔄 Show All</button>
+</div>
 
 </div>
 
