--- a/vault.html
+++ b/vault.html
@@ -132,7 +132,7 @@
 }
 </style>
 </head>
-<body><div class="hero-logo"><img alt="AnchorStack Logo" src="images/Logo.png"/></div>
+<body>
 <h1>AnchorStack Product Vault</h1>
   <img src="images/Logo.png" alt="AnchorStack Logo" style="max-width:220px; margin-bottom: 1rem;" />
 <div style="text-align:center; margin-bottom: 2rem;">
