Fixed product card tier classes and removed extra logo

--- a/vault.html
+++ b/vault.html
@@ -134,7 +134,7 @@
 </head>
 <body>
 <h1>AnchorStack Product Vault</h1>
-  
+  <div class="hero-logo"><img alt="AnchorStack Logo" src="images/Logo.png"/></div>
 <div style="text-align:center; margin-bottom: 2rem;">
 <h2>What are you looking for today?</h2>
 <button class="button" onclick="filterTier('free')">🆓 Free</button>
