Restored clickable logo and grid layout to vault

--- a/vault.html
+++ b/vault.html
@@ -133,6 +133,12 @@
 </style>
 </head>
 <body>
+<div class="hero-logo">
+  <a href="index.html">
+    <img alt="AnchorStack Logo" src="images/Logo.png" />
+  </a>
+</div>
+
 <h1>AnchorStack Product Vault</h1>
   <div class="hero-logo"><img alt="AnchorStack Logo" src="images/Logo.png"/></div>
 <div style="text-align:center; margin-bottom: 2rem;">
@@ -143,6 +149,13 @@
 <button class="button" onclick="filterTier('all')">🔄 Show All</button>
 </div>
 
+</div>
+<div class="vault-grid">
+  <!-- free / mid / top sections each inside -->
+  <div class="tier-section">
+    <a class="product-card tier-free" href="...">...</a>
+    ...
+  </div>
 </div>
 
 <div style="height: 2rem;"></div><div class="vault-grid"><h2 style="margin-top: 3rem; margin-bottom: 1rem; text-align: center; color: #00BFFF; border-bottom: 1px solid #ccc; padding-bottom: 0.5rem;">🆓 Free Resources</h2><div class="tier-section"><a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/msenf?utm_source=vault&amp;utm_medium=web&amp;utm_campaign=launch" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
