Fixed duplicate vault-grid causing double slate boxes

--- a/vault.html
+++ b/vault.html
@@ -151,11 +151,23 @@
 
 </div>
 <div class="vault-grid">
-  <!-- free / mid / top sections each inside -->
+
+  <h2>🆓 Free</h2>
   <div class="tier-section">
     <a class="product-card tier-free" href="...">...</a>
-    ...
   </div>
+
+  <h2>💡 Midrange</h2>
+  <div class="tier-section">
+    <a class="product-card tier-mid" href="...">...</a>
+  </div>
+
+  <h2>🚀 Top Tier</h2>
+  <div class="tier-section">
+    <a class="product-card tier-top" href="...">...</a>
+  </div>
+
+</div>
 </div>
 
 <div style="height: 2rem;"></div><div class="vault-grid"><h2 style="margin-top: 3rem; margin-bottom: 1rem; text-align: center; color: #00BFFF; border-bottom: 1px solid #ccc; padding-bottom: 0.5rem;">🆓 Free Resources</h2><div class="tier-section"><a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/msenf?utm_source=vault&amp;utm_medium=web&amp;utm_campaign=launch" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
