Restored card content and centered section headers

--- a/vault.html
+++ b/vault.html
@@ -147,20 +147,16 @@
 
 <div class="vault-grid">
 
-  <h2>🆓 Free</h2>
-  <div class="tier-section">
-    <a class="product-card tier-free" href="...">...</a>
-  </div>
+  <h2 style="text-align: center; color: #00BFFF;">🆓 Free</h2>
+<div class="tier-section">
+  <a class="product-card tier-free" href="https://...">
+    <span class="badge">New</span>
+    <img src="images/..." alt="...">
+    <h3>Product Name</h3>
+    <p class="price">$15</p>
+  </a>
+</div>
 
-  <h2>💡 Midrange</h2>
-  <div class="tier-section">
-    <a class="product-card tier-mid" href="...">...</a>
-  </div>
-
-  <h2>🚀 Top Tier</h2>
-  <div class="tier-section">
-    <a class="product-card tier-top" href="...">...</a>
-  </div>
 
 </div>
 
