--- a/vault.html
+++ b/vault.html
@@ -11,7 +11,6 @@
   <meta name="author" content="Ricky Jarnagin">
   <meta name="keywords" content="AnchorStack, digital products, creator tools, clarity kits, hustle, Notion templates, product launch, focus, productivity">
 
-  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -83,10 +82,6 @@
       margin-bottom: 0.75rem;
     }
 
-    .card-wrapper {
-      position: relative;
-    }
-
     .badge {
       position: absolute;
       top: 8px;
@@ -107,23 +102,22 @@
       font-weight: 600;
     }
 
-    .product-card img {
-      border-radius: 12px 12px 0 0;
-    }
-
-    .button {
-      background: #007bff;
+    .tier-button {
+      background-color: #007bff;
       color: white;
-      padding: 10px 20px;
-      margin: 0 5px;
       border: none;
+      padding: 12px 20px;
+      margin: 5px;
+      font-size: 1rem;
       border-radius: 6px;
       cursor: pointer;
-      font-size: 1rem;
+      font-weight: 600;
+      transition: background-color 0.3s ease, transform 0.2s ease;
     }
 
-    .button:hover {
-      background: #0056b3;
+    .tier-button:hover {
+      background-color: #0056b3;
+      transform: scale(1.05);
     }
   </style>
 </head>
@@ -139,24 +133,67 @@
 
 <div style="text-align:center; margin-bottom: 2rem;">
   <h2>What are you looking for today?</h2>
-  <button class="button" onclick="filterTier('free')">🆓 Free</button>
-  <button class="button" onclick="filterTier('mid')">💡 Midrange</button>
-  <button class="button" onclick="filterTier('top')">🚀 Top Tier</button>
-  <button class="button" onclick="filterTier('all')">🔄 Show All</button>
+  <button class="tier-button" onclick="filterTier('free')">🆓 Free</button>
+  <button class="tier-button" onclick="filterTier('mid')">💡 Midrange</button>
+  <button class="tier-button" onclick="filterTier('top')">🚀 Top Tier</button>
+  <button class="tier-button" onclick="filterTier('all')">🔄 Show All</button>
 </div>
 
 <div class="vault-grid">
 
-  <h2 style="text-align: center; color: #00BFFF;">🆓 Free</h2>
-<div class="tier-section">
-  <a class="product-card tier-free" href="https://...">
-    <span class="badge">New</span>
-    <img src="images/..." alt="...">
-    <h3>Product Name</h3>
-    <p class="price">$15</p>
-  </a>
-</div>
+  <h2 style="text-align: center; color: #00BFFF;">🆓 Free Resources</h2>
+  <div class="tier-section">
+    <a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/msenf" target="_blank">
+      <span class="badge">New</span>
+      <img src="images/clarity-core-bundle.jpg" alt="Clarity Core Bundle">
+      <h3>Clarity Core Bundle</h3>
+      <p class="price">$39</p>
+    </a>
+    <a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/nupwf" target="_blank">
+      <span class="badge">New</span>
+      <img src="images/calm-clarity-kit.jpg" alt="Calm Clarity Kit">
+      <h3>Calm Clarity Kit – 7-Day Edition</h3>
+      <p class="price">$15</p>
+    </a>
+    <a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/jqzdtq" target="_blank">
+      <span class="badge">New</span>
+      <img src="images/launch-earn-combo.jpg" alt="Launch & Earn Combo">
+      <h3>Launch & Earn Combo Pack</h3>
+      <p class="price">$15</p>
+    </a>
+  </div>
 
+  <h2 style="text-align: center; color: #00BFFF;">💡 Midrange Kits</h2>
+  <div class="tier-section">
+    <a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/lapqw" target="_blank">
+      <span class="badge">New</span>
+      <img src="images/work-life-integration.jpg" alt="Work-Life Integration">
+      <h3>Work-Life Integration Mastery</h3>
+      <p class="price">$9</p>
+    </a>
+    <a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/jfkdn" target="_blank">
+      <span class="badge">New</span>
+      <img src="images/hustlemode-command-center.jpg" alt="HustleMode Command Center">
+      <h3>HustleMode Notion Command Center</h3>
+      <p class="price">$29</p>
+    </a>
+  </div>
+
+  <h2 style="text-align: center; color: #00BFFF;">🚀 Top Tier Bundles</h2>
+  <div class="tier-section">
+    <a class="product-card tier-top" href="https://grafixartistry6.gumroad.com/l/gxpksf" target="_blank">
+      <span class="badge">New</span>
+      <img src="images/clarity-master-bundle.jpg" alt="Clarity Master Bundle">
+      <h3>Clarity Master Bundle</h3>
+      <p class="price">$99</p>
+    </a>
+    <a class="product-card tier-top" href="https://grafixartistry6.gumroad.com/l/eylhzc" target="_blank">
+      <span class="badge">New</span>
+      <img src="images/digital-clarity-kit.jpg" alt="Digital Clarity Kit">
+      <h3>Digital Clarity Kit (Blueprint)</h3>
+      <p class="price">$199</p>
+    </a>
+  </div>
 
 </div>
 
