--- a/mid.html
+++ b/mid.html
@@ -132,6 +132,7 @@
 <h1>AnchorStack Product Vault</h1>
 <div style="text-align:center; margin-bottom: 2rem;">
 <h2>What are you looking for today?</h2>
+ <img src="images/Logo.png" alt="AnchorStack Logo" style="max-width:220px; margin-bottom: 1rem;" />
 <button class="button" onclick="filterTier('free')">🆓 Free</button>
 <button class="button" onclick="filterTier('mid')">💡 Midrange</button>
 <button class="button" onclick="filterTier('top')">🚀 Top Tier</button>
