Fixed badge to return home

--- a/subscribe.html
+++ b/subscribe.html
@@ -51,7 +51,11 @@
 </head>
 <body>
 
-
+<div style="text-align:center; margin-top: 2rem;">
+  <a href="index.html">
+    <img src="images/Logo.png" alt="AnchorStack Logo" style="max-width: 200px;">
+  </a>
+</div>
     <div class="container">
         
     <h1>Join the AnchorStack List</h1>
@@ -65,7 +69,7 @@
     ← Return to AnchorStack Home
   </a>
 </div>
-<div style="text-align: center; margin-top: 2rem;">
+<div style="text-align: center; margin-top: 3rem;">
   <a href="index.html" style="background: #007bff; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px;">
     ← Return to AnchorStack Home
   </a>
