--- a/vault.html
+++ b/vault.html
@@ -140,6 +140,29 @@
   <button class="tier-button" onclick="filterTier('top')">🚀 Top Tier</button>
   <button class="tier-button" onclick="filterTier('all')">🔄 Show All</button>
 </div>
+<section class="vault-tiers">
+  <h2>🔐 Choose Your Access Level</h2>
+  <div class="tier-cards">
+    <div class="card">
+      <h3>Mid Tier</h3>
+      <p><strong>$29/month</strong></p>
+      <ul>
+        <li>All monthly Vault drops</li>
+        <li>Access to core bundles & tools</li>
+        <li>Great for creators on the move</li>
+      </ul>
+    </div>
+    <div class="card">
+      <h3>Top Tier</h3>
+      <p><strong>$129 one-time</strong></p>
+      <ul>
+        <li>Lifetime access to **everything**</li>
+        <li>All future premium releases included</li>
+        <li>Best value – one payment, no limits</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
 <div class="vault-grid">
 
