--- a/vault.html
+++ b/vault.html
@@ -140,29 +140,32 @@
   <button class="tier-button" onclick="filterTier('top')">🚀 Top Tier</button>
   <button class="tier-button" onclick="filterTier('all')">🔄 Show All</button>
 </div>
-<section class="vault-tiers">
-  <h2>🔐 Choose Your Access Level</h2>
-  <div class="tier-cards">
-    <div class="card">
-      <h3>Mid Tier</h3>
-      <p><strong>$29/month</strong></p>
-      <ul>
-        <li>All monthly Vault drops</li>
-        <li>Access to core bundles & tools</li>
-        <li>Great for creators on the move</li>
-      </ul>
-    </div>
-    <div class="card">
-      <h3>Top Tier</h3>
-      <p><strong>$129 one-time</strong></p>
-      <ul>
-        <li>Lifetime access to **everything**</li>
-        <li>All future premium releases included</li>
-        <li>Best value – one payment, no limits</li>
-      </ul>
-    </div>
-  </div>
-</section>
+<div style="text-align: center; font-family: sans-serif; max-width: 600px; margin: auto; line-height: 1.6;">
+
+  <h2>🔒 Choose Your Access Level</h2>
+
+  <h3>Mid Tier — $29/month</h3>
+  <p>
+    Monthly Vault drops<br>
+    <br>
+    Core bundles &amp; tools<br>
+    <br>
+    Flexible access for creators on the move<br>
+    👉 <em>Perfect for monthly explorers</em>
+  </p>
+
+  <h3>Top Tier — $129 one-time</h3>
+  <p>
+    Lifetime access to <strong>everything</strong><br>
+    <br>
+    All future premium drops included<br>
+    <br>
+    One payment, no limits<br>
+    🔥 <em>Best value for serious builders</em>
+  </p>
+
+</div>
+
 
 <div class="vault-grid">
 
