--- a/vault.html
+++ b/vault.html
@@ -144,27 +144,25 @@
 
   <h2>🔒 Choose Your Access Level</h2>
 
-  <h3>Mid Tier — $29/month</h3>
-  <p>
-    Monthly Vault drops<br>
-    <br>
-    Core bundles &amp; tools<br>
-    <br>
-    Flexible access for creators on the move<br>
-    👉 <em>Perfect for monthly explorers</em>
-  </p>
+ <div class="vault-pricing-container">
 
-  <h3>Top Tier — $129 one-time</h3>
-  <p>
-    Lifetime access to <strong>everything</strong><br>
-    <br>
-    All future premium drops included<br>
-    <br>
-    One payment, no limits<br>
-    🔥 <em>Best value for serious builders</em>
-  </p>
+  <div class="vault-tier-card mid-tier">
+    <h2>💼 Mid Tier Access</h2>
+    <p><strong>$29/month</strong></p>
+    <p>Recurring monthly membership. Get full access to all Mid Tier Vault drops — now and in the future.</p>
+    <a href="https://grafixartistry6.gumroad.com/l/xalvnc?utm_source=website&utm_medium=button&utm_campaign=vault_mid_monthly" class="vault-button">Join Mid Tier</a>
+  </div>
+
+  <div class="vault-tier-card top-tier">
+    <h2>🔐 Top Tier Access</h2>
+    <p><strong>$129/year</strong></p>
+    <p>Unlock every premium product, bonus drop, and insider tool in the Vault for a full 12 months.</p>
+    <p><em>Renews yearly. Cancel anytime. Grandfathered one-time members retain lifetime access.</em></p>
+    <a href="https://grafixartistry6.gumroad.com/l/uebseh?utm_source=website&utm_medium=button&utm_campaign=vault_top_yearly" class="vault-button">Join Top Tier</a>
+  </div>
 
 </div>
+
 
 
 <div class="vault-grid">
