--- a/vault.html
+++ b/vault.html
@@ -152,6 +152,7 @@
     <p>Recurring monthly membership. Get full access to all Mid Tier Vault drops — now and in the future.</p>
     <a href="https://grafixartistry6.gumroad.com/l/xalvnc?utm_source=website&utm_medium=button&utm_campaign=vault_mid_monthly" class="vault-button">Join Mid Tier</a>
   </div>
+<hr style="margin: 2rem 0; border: none; border-top: 1px solid #ccc;">
 
   <div class="vault-tier-card top-tier">
     <h2>🔐 Top Tier Access</h2>
