--- a/vault.html
+++ b/vault.html
@@ -164,6 +164,15 @@
 
 </div>
 
+<div style="display: flex; gap: 10px; flex-wrap: wrap;">
+  <a href="https://grafixartistry6.gumroad.com/l/xalvnc" target="_blank" style="background-color: #00cfff; color: white; font-weight: bold; padding: 12px 20px; border-radius: 6px; text-decoration: none; display: inline-block;">
+    Mid Tier Access – $29/month
+  </a>
+  
+  <a href="https://grafixartistry6.gumroad.com/l/cayxc" target="_blank" style="background-color: #00cfff; color: white; font-weight: bold; padding: 12px 20px; border-radius: 6px; text-decoration: none; display: inline-block;">
+    Top Tier Access – $129/year
+  </a>
+</div>
 
 
 <div class="vault-grid">
