--- a/vault.html
+++ b/vault.html
@@ -162,6 +162,10 @@
     Top Tier Access – $129/year
   </a>
 </div>
+   <p style="font-size: 0.85rem; color: #777; margin-top: 6px;">
+  Cancel anytime. Grandfathered Top Tier members keep lifetime access.
+</p>
+
 </div>
 <hr style="margin: 2rem 0; border: none; border-top: 1px solid #ccc;">
 <div class="vault-grid">
