--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
 <p>You don’t need more tools. You need the *right* ones — layered intentionally, delivered clearly, and built to last.</p>
 <a class="button" href="vault.html">Enter the Vault</a>
 <a class="button" href="about.html">About AnchorStack</a>
-  <a href="/subscribe" style="background-color: #00cfff; color: white; font-weight: bold; padding: 12px 20px; border-radius: 6px; text-decoration: none; display: inline-block; margin-left: 10px;">
+ <a href="/subscribe" class="button">
   📬 Subscribe
 </a>
+
 
 <p style="margin-top: 2rem;">Clarity. Momentum. Creation — without the noise. The anchor in the storm. This is your stack.</p>
 </div>
