Resolve merge conflict in index.html

--- a/vault.html
+++ b/vault.html
@@ -141,6 +141,25 @@
   <button class="tier-button" onclick="filterTier('all')">🔄 Show All</button>
 </div>
 <div style="text-align: center; font-family: sans-serif; max-width: 600px; margin: auto; line-height: 1.6;">
+<h2>🔒 Choose Your Access Level</h2>
+<div class="vault-pricing-container">
+  <div class="vault-tier-card mid-tier">
+    <h2>💼 Mid Tier Access</h2>
+    <p><strong>$29/month</strong></p>
+    <p>Recurring monthly membership. Get full access to all Mid Tier Vault drops — now and in the future.</p>
+  </div>
+  <div class="vault-tier-card top-tier">
+    <h2>🔐 Top Tier Access</h2>
+    <p><strong>$129/year</strong></p>
+    <p>Unlock every premium product, bonus drop, and insider tool in the Vault for a full 12 months.</p>
+    <p><em>Renews yearly. Cancel anytime. Grandfathered one-time members retain lifetime access.</em></p>
+  </div>
+</div>
+<div style="display: flex; gap: 10px; flex-wrap: wrap;">
+  <a href="https://grafixartistry6.gumroad.com/l/xalvnc" …>Mid Tier Access – $29/month</a>
+  <a href="https://grafixartistry6.gumroad.com/l/cayxc" …>Top Tier Access – $129/year</a>
+</div>
+
 
   <h2>🔒 Choose Your Access Level</h2>
 
