--- a/contact.html
+++ b/contact.html
@@ -1,68 +1,120 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta property="og:title" content="AnchorStack – Clarity Kits & Tools for Creators">
-<meta property="og:description" content="Curated momentum tools and digital product kits that help creators focus, launch, and grow — without the noise.">
-<meta property="og:image" content="https://anchorstack.pro/images/Logo.png">
-<meta property="og:url" content="https://anchorstack.pro">
-<meta name="twitter:card" content="summary_large_image">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact AnchorStack</title>
+  <style>
+    body {
+      background: url('background.png') no-repeat center center fixed;
+      background-size: cover;
+      font-family: 'Helvetica Neue', sans-serif;
+      margin: 0;
+      padding: 0;
+      color: #ffffff;
+    }
 
-<meta name="description" content="AnchorStack: Tools, templates, and clarity kits for creators, thinkers, and focused doers. Curated digital momentum, one product at a time.">
-<meta name="author" content="Ricky Jarnagin">
-<meta name="keywords" content="AnchorStack, digital products, creator tools, clarity kits, hustle, Notion templates, product launch, focus, productivity">
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+    }
 
-<link rel="icon" type="image/png" href="favicon.png">
+    .logo {
+      height: 70px;
+    }
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact – AnchorStack</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            margin: 0;
-            padding: 2rem;
-            background: #2f2f2f;
-            color: #f0f0f0;
-            line-height: 1.6;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            text-align: center;
-        }
-        a {
-            color: #00BFFF;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .button {
-            display: inline-block;
-            background: #00BFFF;
-            color: #fff;
-            padding: 0.75rem 1.5rem;
-            border-radius: 6px;
-            margin-top: 1rem;
-            text-decoration: none;
-        }
-        h1, h2 {
-            color: #ffffff;
-        }
-    </style>
+    nav a {
+      margin: 0 1rem;
+      color: #ffffff;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    .section-wrapper {
+      width: 90%;
+      max-width: 800px;
+      margin: 2rem auto;
+      text-align: center;
+    }
+
+    form {
+      background-color: rgba(0,0,0,0.6);
+      padding: 2rem;
+      border-radius: 12px;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      text-align: left;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 0.75rem;
+      border-radius: 8px;
+      border: none;
+      font-size: 1rem;
+    }
+
+    button {
+      padding: 0.75rem;
+      border: none;
+      border-radius: 8px;
+      background-color: #00bfa6;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+
+    button:hover {
+      background-color: #009d89;
+    }
+
+    footer {
+      padding: 2rem;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #aaa;
+      background-color: rgba(0,0,0,0.4);
+      margin-top: 3rem;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        
-    <h1>Get in Touch</h1>
-    <p>Have a question, feedback, or collaboration idea?</p>
-    <p>Reach out anytime at <a href="mailto:hello@anchorstack.pro">hello@anchorstack.pro</a></p>
-    <p style="margin-top:2rem;">We read every email — even if we're brewing coffee while we do it.</p>
-    
-    </div>
-<div style="text-align: center; margin-top: 2rem;">
-  <a href="index.html" style="background: #007bff; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px;">
-    ← Return to AnchorStack Home
-  </a>
-</div>
+
+  <header>
+    <img src="logo.png" alt="AnchorStack Logo" class="logo">
+    <nav>
+      <a href="anchorstack-home.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="vault.html">Vault</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <section class="section-wrapper">
+    <h1>Contact AnchorStack</h1>
+    <p>Questions? Ideas? Just want to say hey? Fill out the form below and we’ll respond soon.</p>
+
+    <form action="#" method="post">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>AnchorStack is built for real people with real ideas — not noise. Every product is designed to help you launch with clarity and calm.</p>
+    <p>&copy; 2025 AnchorStack.pro • All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
