Remove duplicate head and consolidate CSS in index.html

--- a/index.html
+++ b/index.html
@@ -23,45 +23,36 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Home – AnchorStack</title>
-
-
 <head>
+  …  
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Home – AnchorStack</title>
 
-<style>
-        body {
-            font-family: sans-serif;
-            margin: 0;
-            padding: 2rem;
-            background: #2f2f2f;
-            color: #f0f0f0;
-            line-height: 1.6;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            text-align: center;
-        }
-        a {
-            color: #00BFFF;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .button {
-            display: inline-block;
-            background: #00BFFF;
-            color: #fff;
-            padding: 0.75rem 1.5rem;
-            border-radius: 6px;
-            margin-top: 1rem;
-            text-decoration: none;
-        }
-        h1, h2 {
-            color: #ffffff;
-        }
-    </style>
+  <style>
+    /* Responsive iframe wrapper */
+    .substack-embed-wrapper {
+      max-width: 480px;
+      width: 100%;
+      margin: 0 auto;
+      overflow: hidden;
+    }
+    .substack-embed-wrapper iframe {
+      width: 100%;
+      height: auto;
+    }
 
-
+    /* Your site styles */
+    body { font-family: sans-serif; … }
+    .container { … }
+    a { … }
+    .button { … }
+    h1, h2 { … }
+  </style>
 </head>
+
+
+
 <body>
 <div class="container">
 <a href="index.html">
