--- a/index.html
+++ b/index.html
@@ -1,92 +1,102 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta property="og:title" content="AnchorStack – Clarity Kits & Tools for Creators">
-<meta property="og:description" content="Curated momentum tools and digital product kits that help creators focus, launch, and grow — without the noise.">
-<meta property="og:image" content="https://anchorstack.pro/images/Logo.png">
-<meta property="og:url" content="https://anchorstack.pro">
-<meta name="twitter:card" content="summary_large_image">
-
-<!-- Google tag (gtag.js) -->
-<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
-<link rel="icon" type="image/png" href="favicon.png">
-
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-QL8N3YFW6B');
-</script>
-
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Home – AnchorStack</title>
-<head>
-  
+  <!-- Meta & SEO -->
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta property="og:title" content="AnchorStack – Clarity Kits & Tools for Creators">
+  <meta property="og:description" content="Curated momentum tools and digital product kits that help creators focus, launch, and grow — without the noise.">
+  <meta property="og:image" content="https://anchorstack.pro/images/Logo.png">
+  <meta property="og:url" content="https://anchorstack.pro">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="description" content="AnchorStack: Tools, templates, and clarity kits for creators…">
+  <meta name="author" content="Ricky Jarnagin">
+  <meta name="keywords" content="AnchorStack, digital products, creator tools, clarity kits, …">
+
+  <!-- Favicons & analytics -->
+  <link rel="icon" type="image/png" href="favicon.png">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-QL8N3YFW6B');
+  </script>
+
   <title>Home – AnchorStack</title>
 
+  <!-- All your CSS in one place -->
   <style>
-    /* Responsive iframe wrapper */
+    /* Page base styles */
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 2rem;
+      background: #2f2f2f;
+      color: #f0f0f0;
+      line-height: 1.6;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      text-align: center;
+    }
+    a {
+      color: #00BFFF;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .button {
+      display: inline-block;
+      background: #00BFFF;
+      color: #fff;
+      padding: 0.75rem 1.5rem;
+      border-radius: 6px;
+      margin: 1rem 0.5rem;
+    }
+    h1, h2 {
+      color: #ffffff;
+    }
+
+    /* Substack embed wrapper */
     .substack-embed-wrapper {
       max-width: 480px;
       width: 100%;
-      margin: 0 auto;
-      overflow: hidden;
+      margin: 2rem auto;
+      padding: 1rem;
+      background: #3a3a3a;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
     }
     .substack-embed-wrapper iframe {
       width: 100%;
       height: auto;
+      border: none;
     }
-
-    /* Your site styles */
-    body { font-family: sans-serif; … }
-    .container { … }
-    a { … }
-    .button { … }
-    h1, h2 { … }
   </style>
+<body>
+  <div class="container">
+    <!-- Logo & headline -->
+    <a href="index.html"><img src="images/Logo.png" alt="AnchorStack Logo" style="max-width:220px; margin-bottom:1rem;"></a>
+    <h1>Build Better. Stack Smarter.</h1>
+    <p>You don’t need more tools. You need the *right* ones — layered intentionally, delivered clearly, and built to last.</p>
+    <a class="button" href="vault.html">Enter the Vault</a>
+    <a class="button" href="about.html">About AnchorStack</a>
+
+    <!-- Subscribe Section -->
+    <section id="subscribe">
+      <h2>Join the AnchorStack Newsletter</h2>
+      <div class="substack-embed-wrapper">
+        <iframe src="https://rickyjarnagin.substack.com/embed" scrolling="no"></iframe>
+      </div>
+    </section>
+
+    <p style="margin-top:2rem;">Clarity. Momentum. Creation — without the noise. The anchor in the storm. This is your stack.</p>
+  </div>
+</body>
+</html>
+
+
 </head>
 
 
-
-<body>
-<div class="container">
-<a href="index.html">
-  <img src="images/Logo.png" alt="AnchorStack Logo" style="max-width:220px; margin-bottom: 1rem;" />
-</a>
-<h1>Build Better. Stack Smarter.</h1>
-<p>You don’t need more tools. You need the *right* ones — layered intentionally, delivered clearly, and built to last.</p>
-<a class="button" href="vault.html">Enter the Vault</a>
-<a class="button" href="about.html">About AnchorStack</a>
-
-<!-- Direct link button -->
-
-
-<!-- Subscribe Section -->
-<section id="subscribe" class="p-4 bg-white rounded shadow">
-  <h2 class="text-xl mb-2">Join the AnchorStack Newsletter</h2>
-
-  <!-- Wrapper starts here -->
-  <div class="substack-embed-wrapper">
-    <iframe
-      src="https://rickyjarnagin.substack.com/embed"
-      width="480" height="320"
-      style="border:1px solid #EEE; background:white;"
-      frameborder="0" scrolling="no">
-    </iframe>
-  </div>
-  <!-- Wrapper ends here -->
-
-</section>
-
-
-
-
-<p style="margin-top: 2rem;">Clarity. Momentum. Creation — without the noise. The anchor in the storm. This is your stack.</p>
-</div>
-</body>
-</html>
