Restore correct remote and update index

--- a/index.html
+++ b/index.html
@@ -82,15 +82,17 @@
     <p>You don’t need more tools. You need the *right* ones — layered intentionally, delivered clearly, and built to last.</p>
     <a class="button" href="vault.html">Enter the Vault</a>
     <a class="button" href="about.html">About AnchorStack</a>
-
   <!-- Latest Post Preview -->
-  <section id="latest-post" class="p-4 bg-white rounded shadow mb-4">
-    <script async src="https://rickyjarnagin.substack.com/embed.js"></script>
-    <div
-      data-post="https://rickyjarnagin.substack.com/p/how-i-built-the-combo-pack-in-a-weekend"
-      class="substack-post"
-    ></div>
-  </section>
+<section id="latest-post" class="p-4 bg-white rounded shadow mb-4">
+  <!-- Load embed.js only once per page (you can move this to <head> if you like) -->
+  <script async src="https://rickyjarnagin.substack.com/embed.js"></script>
+
+  <!-- This div should render the preview card -->
+  <div
+    data-post="https://rickyjarnagin.substack.com/p/how-i-built-the-combo-pack-in-a-weekend"
+    class="substack-post">
+  </div>
+</section>
     <!-- Subscribe Section -->
     <section id="subscribe">
       <h2>Join the AnchorStack Newsletter</h2>
