--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="description" content="AnchorStack: Tools, templates, and clarity kits for creators…">
   <meta name="author" content="Ricky Jarnagin">
-  <meta name="keywords" content="AnchorStack, digital products, creator tools, clarity kits, …">
+  <meta name="keywords" content="AnchorStack, digital products, creator tools, clarity kits…">
 
-  <!-- Favicons & analytics -->
+  <!-- Favicon & Analytics -->
   <link rel="icon" type="image/png" href="favicon.png">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
   <script>
@@ -25,9 +25,8 @@
 
   <title>Home – AnchorStack</title>
 
-  <!-- All your CSS in one place -->
+  <!-- All CSS -->
   <style>
-    /* Page base styles */
     body {
       font-family: sans-serif;
       margin: 0;
@@ -41,11 +40,7 @@
       margin: 0 auto;
       text-align: center;
     }
-    a {
-      color: #00BFFF;
-      text-decoration: none;
-      font-weight: bold;
-    }
+    a { color: #00BFFF; text-decoration: none; font-weight: bold; }
     .button {
       display: inline-block;
       background: #00BFFF;
@@ -54,11 +49,8 @@
       border-radius: 6px;
       margin: 1rem 0.5rem;
     }
-    h1, h2 {
-      color: #ffffff;
-    }
+    h1, h2 { color: #ffffff; }
 
-    /* Substack embed wrapper */
     .substack-embed-wrapper {
       max-width: 480px;
       width: 100%;
@@ -73,40 +65,52 @@
       height: auto;
       border: none;
     }
+
+    /* Optional styling for the post preview container */
+    #latest-post {
+      max-width: 600px;
+      margin: 2rem auto;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      padding: 1rem;
+    }
   </style>
+</head>
+
 <body>
   <div class="container">
     <!-- Logo & headline -->
-    <a href="index.html"><img src="images/Logo.png" alt="AnchorStack Logo" style="max-width:220px; margin-bottom:1rem;"></a>
+    <a href="/"><img src="images/Logo.png" alt="AnchorStack Logo" style="max-width:220px; margin-bottom:1rem;"></a>
     <h1>Build Better. Stack Smarter.</h1>
     <p>You don’t need more tools. You need the *right* ones — layered intentionally, delivered clearly, and built to last.</p>
-    <a class="button" href="vault.html">Enter the Vault</a>
-    <a class="button" href="about.html">About AnchorStack</a>
-  <!-- Latest Post Preview -->
-<section id="latest-post" class="p-4 bg-white rounded shadow mb-4">
-  <!-- Load embed.js only once per page (you can move this to <head> if you like) -->
-  <script async src="https://rickyjarnagin.substack.com/embed.js"></script>
+    <a class="button" href="/vault">Enter the Vault</a>
+    <a class="button" href="/about">About AnchorStack</a>
 
-  <!-- This div should render the preview card -->
-  <div
-    data-post="https://rickyjarnagin.substack.com/p/how-i-built-the-combo-pack-in-a-weekend"
-    class="substack-post">
-  </div>
-</section>
+    <!-- Latest Post Preview -->
+    <section id="latest-post">
+      <script async src="https://rickyjarnagin.substack.com/embed.js"></script>
+      <div
+        class="substack-post"
+        data-post="https://rickyjarnagin.substack.com/p/how-i-built-the-combo-pack-in-a-weekend">
+      </div>
+    </section>
+
     <!-- Subscribe Section -->
     <section id="subscribe">
       <h2>Join the AnchorStack Newsletter</h2>
       <div class="substack-embed-wrapper">
-        <iframe src="https://rickyjarnagin.substack.com/embed" scrolling="no"></iframe>
+        <iframe
+          src="https://rickyjarnagin.substack.com/embed"
+          scrolling="no">
+        </iframe>
       </div>
     </section>
 
-    <p style="margin-top:2rem;">Clarity. Momentum. Creation — without the noise. The anchor in the storm. This is your stack.</p>
+    <p style="margin-top:2rem;">
+      Clarity. Momentum. Creation — without the noise. The anchor in the storm. This is your stack.
+    </p>
   </div>
 </body>
 </html>
-
-
-</head>
-
 
