Override Substack embed text color for visibility

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
       margin: 1rem 0.5rem;
     }
     h1, h2 { color: #ffffff; }
+/* Ensure Substack embeds use a readable text color */
+.substack-post {
+  color: #222 !important;
+}
+.substack-post a {
+  color: #007bff !important;
+}
 
     .substack-embed-wrapper {
       max-width: 480px;
