--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     gtag('config', 'G-QL8N3YFW6B');
   </script>
 
+  <!-- Substack embed script (load once) -->
+  <script async src="https://rickyjarnagin.substack.com/embed.js"></script>
+
   <title>Home – AnchorStack</title>
 
   <!-- All CSS -->
@@ -50,13 +53,14 @@
       margin: 1rem 0.5rem;
     }
     h1, h2 { color: #ffffff; }
-/* Ensure Substack embeds use a readable text color */
-.substack-post {
-  color: #222 !important;
-}
-.substack-post a {
-  color: #007bff !important;
-}
+
+    /* Ensure Substack embeds use a readable text color */
+    .substack-post {
+      color: #222 !important;
+    }
+    .substack-post a {
+      color: #007bff !important;
+    }
 
     .substack-embed-wrapper {
       max-width: 480px;
@@ -73,7 +77,7 @@
       border: none;
     }
 
-    /* Optional styling for the post preview container */
+    /* Styling for the post preview container */
     #latest-post {
       max-width: 600px;
       margin: 2rem auto;
@@ -96,28 +100,9 @@
 
     <!-- Latest Post Preview -->
     <section id="latest-post">
-      <script async src="https://rickyjarnagin.substack.com/embed.js"></script>
       <div
         class="substack-post"
         data-post="https://rickyjarnagin.substack.com/p/how-i-built-the-combo-pack-in-a-weekend">
       </div>
-    </section>
-
-    <!-- Subscribe Section -->
-    <section id="subscribe">
-      <h2>Join the AnchorStack Newsletter</h2>
-      <div class="substack-embed-wrapper">
-        <iframe
-          src="https://rickyjarnagin.substack.com/embed"
-          scrolling="no">
-        </iframe>
-      </div>
-    </section>
-
-    <p style="margin-top:2rem;">
-      Clarity. Momentum. Creation — without the noise. The anchor in the storm. This is your stack.
-    </p>
-  </div>
-</body>
-</html>
+    </s
 
