Restore missing closing tags in index.html

--- a/index.html
+++ b/index.html
@@ -98,11 +98,31 @@
     <a class="button" href="/vault">Enter the Vault</a>
     <a class="button" href="/about">About AnchorStack</a>
 
-    <!-- Latest Post Preview -->
+       <!-- Latest Post Preview -->
     <section id="latest-post">
       <div
         class="substack-post"
         data-post="https://rickyjarnagin.substack.com/p/how-i-built-the-combo-pack-in-a-weekend">
       </div>
-    </s
+    </section>
+
+    <!-- Subscribe Section -->
+    <section id="subscribe">
+      <h2>Join the AnchorStack Newsletter</h2>
+      <div class="substack-embed-wrapper">
+        <iframe
+          src="https://rickyjarnagin.substack.com/embed"
+          scrolling="no">
+        </iframe>
+      </div>
+    </section>
+
+    <p style="margin-top:2rem;">
+      Clarity. Momentum. Creation — without the noise. The anchor in the storm. This is your stack.
+    </p>
+
+  </div>  <!-- close .container -->
+</body>
+</html>
+
 
