--- a/vault.html
+++ b/vault.html
@@ -122,6 +122,30 @@
       transform: scale(1.05);
     }
   </style>
+.vault-banner {
+  background: #ffeaa7;
+  padding: 1rem;
+  text-align: center;
+  font-size: 1.1rem;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+.vault-banner .cta-button {
+  display: inline-block;
+  background: #00b894;
+  color: #fff;
+  padding: 8px 16px;
+  border-radius: 6px;
+  margin-top: 10px;
+  text-decoration: none;
+  font-weight: bold;
+}
+.vault-banner .cta-button:hover {
+  background: #019875;
+}
+
+
 </head>
 <body>
 
@@ -158,6 +182,11 @@
 <div style="display: flex; gap: 10px; flex-wrap: wrap;">
   <a href="https://grafixartistry6.gumroad.com/l/xalvnc" …>Mid Tier Access – $29/month</a>
   <a href="https://grafixartistry6.gumroad.com/l/cayxc" …>Top Tier Access – $129/year</a>
+</div>
+<div class="vault-banner">
+  <p>🎉 Over 600 sales in the Vault in just 24 hours. Thank you for making this launch unforgettable.</p>
+  <p><strong>New drops are coming soon.</strong> Creators are moving fast — don’t miss what’s waiting inside.</p>
+  <a href="/vault" class="cta-button">Explore Now</a>
 </div>
 
 
