Added Substack sidebar to vault layout

--- a/vault.html
+++ b/vault.html
@@ -179,6 +179,17 @@
     <p><em>Renews yearly. Cancel anytime. Grandfathered one-time members retain lifetime access.</em></p>
   </div>
 </div>
+<!-- SUBSTACK SIDEBAR -->
+  <div style="flex:1;">
+    <div style="background:#f9f9f9; padding:1rem; border-radius:8px; width:100%; font-size:0.9rem;">
+      <h4 style="margin-top:0; font-size:1rem; color:#222;">📬 Latest from Substack</h4>
+      <ul style="padding-left:1em; margin:0;">
+        <li><a href="https://rickyjarnagin.substack.com/p/new-drops-just-hit-the-vault-see" target="_blank" style="color:#0074cc; text-decoration:none;">New Drops Just Hit the Vault</a></li>
+        <li><a href="https://rickyjarnagin.substack.com/p/how-i-built-the-combo-pack" target="_blank" style="color:#0074cc; text-decoration:none;">How I Built the Combo Pack</a></li>
+        <li><a href="https://rickyjarnagin.substack.com/p/7-day-reset-kit" target="_blank" style="color:#0074cc; text-decoration:none;">7-Day Reset Kit</a></li>
+      </ul>
+    </div>
+  </div>
 <div style="display: flex; gap: 10px; flex-wrap: wrap;">
   <a href="https://grafixartistry6.gumroad.com/l/xalvnc" …>Mid Tier Access – $29/month</a>
   <a href="https://grafixartistry6.gumroad.com/l/cayxc" …>Top Tier Access – $129/year</a>
@@ -194,14 +205,7 @@
 
  <div class="vault-pricing-container">
 
- 
-
-
- 
-
-
-
-<div style="display: flex; gap: 10px; flex-wrap: wrap;">
+ <div style="display: flex; gap: 10px; flex-wrap: wrap;">
   <a href="https://grafixartistry6.gumroad.com/l/xalvnc" target="_blank" style="background-color: #00cfff; color: white; font-weight: bold; padding: 12px 20px; border-radius: 6px; text-decoration: none; display: inline-block;">
     Mid Tier Access – $29/month
   </a>
