Injected Substack sidebar and finalized Vault layout

--- a/vault.html
+++ b/vault.html
@@ -20,7 +20,11 @@
     <!-- LEFT COLUMN: MAIN CONTENT -->
     <div style="flex:3 1 60%; min-width:300px;">
       <h2>🧰 Vault Products</h2>
-      <p>This is where your current product grid or content goes.</p>
+      <div class="vault-products">
+  <div class="product-card">...</div>
+  <div class="product-card">...</div>
+  <!-- etc. -->
+</div>
     </div>
 
     <!-- RIGHT COLUMN: SUBSTACK SIDEBAR -->
