--- a/vault.html
+++ b/vault.html
@@ -194,28 +194,18 @@
 </a>
 </div>
 
-  <div class="substack-form substack-sidebar">
-    <h2>📬 Want More? Get Vault Updates</h2>
-    <p>Subscribe below to receive fresh drops, insider-only bonuses, and early access announcements:</p>
-    <iframe src="https://rickyjarnagin.substack.com/embed" frameborder="0" scrolling="no"></iframe>
-  </div>
-
-       <iframe src="https://rickyjarnagin.substack.com/embed" frameborder="0" scrolling="no"
-              style="border: 1px solid #ccc; border-radius: 10px; width: 100%; max-width: 480px; height: 180px;"></iframe>
-    </div>
-  </details>
-
-  <div class="vault-blurbs" style="margin-top: 3rem;">
+  <section class="vault-extras">
+  
+    <div class="vault-blurbs" style="margin-top: 3rem;">
     <div style="margin-bottom: 2rem;">
       <h3>💸 Become an Affiliate</h3>
       <p>Want to earn by sharing the Vault? Join our affiliate program and get paid when others unlock access.</p>
-     <a href="mailto:support@anchorstack.pro?subject=Vault Affiliate Inquiry" target="_blank" style="color: #6c5ce7; font-weight: bold;">Become an affiliate →</a>
+      <a href="#affiliate" target="_blank" style="color: #6c5ce7; font-weight: bold;">Become an affiliate →</a>
     </div>
     <div>
       <h3>🤝 Collaboration Invitation</h3>
       <p>Got something to share with the AnchorStack community? We're always open to high-quality collabs, guest kits, or digital tools.</p>
-      <a href="mailto:support@anchorstack.pro?subject=Vault Collaboration Inquiry" target="_blank" style="color: #6c5ce7; font-weight: bold;">Pitch your idea →</a>
-
+      <a href="#affiliate" target="_blank" style="color: #6c5ce7; font-weight: bold;">Pitch your idea →</a>
     </div>
   </div>
 </section>
