--- a/vault.html
+++ b/vault.html
@@ -35,11 +35,6 @@
       flex: 1 1 65%;
       min-width: 300px;
     }
-    .substack-sidebar {
-      flex: 1 1 30%;
-      min-width: 280px;
-      max-width: 360px;
-    }
     .vault-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
@@ -87,15 +82,10 @@
       margin-right: 6px;
       vertical-align: middle;
     }
-    .tier-free::before {
-      background-color: #00C853;
-    }
-    .tier-mid::before {
-      background-color: #FFD600;
-    }
-    .tier-top::before {
-      background-color: #D50000;
-    }
+    .tier-free::before { background-color: #00C853; }
+    .tier-mid::before { background-color: #FFD600; }
+    .tier-top::before { background-color: #D50000; }
+
     body {
       font-family: sans-serif;
       background: #f9f9f9;
@@ -115,17 +105,6 @@
       text-align: center;
       font-size: 1.2rem;
     }
-    .substack-form {
-      text-align: center;
-      margin-top: 3rem;
-    }
-    .substack-form iframe {
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      width: 100%;
-      max-width: 480px;
-      height: 180px;
-    }
   </style>
 </head>
 <body>
@@ -134,7 +113,6 @@
     <div class="vault-banner">
       Thank you for being a Vault Member. You're unlocking tools designed to bring clarity, momentum, and peace to your creative work.
     </div>
-
     <div class="main-products">
       <h2>🎁 Free Tier Access</h2>
       <div class="vault-grid">
@@ -145,7 +123,6 @@
           <p class="price">FREE</p>
         </a>
       </div>
-
       <h2>⚡ Mid Tier Access</h2>
       <div class="vault-grid">
         <a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/msenf" target="_blank">
@@ -173,7 +150,6 @@
           <p class="price">$15</p>
         </a>
       </div>
-
       <h2>🚀 Top Tier Access</h2>
       <div class="vault-grid">
         <a class="product-card tier-top" href="https://grafixartistry6.gumroad.com/l/gxpksf" target="_blank">
@@ -195,7 +171,6 @@
           <p class="price">$49</p>
         </a>
       </div>
-
       <button id="substack-toggle" style="margin: 3rem 0 1rem 0;">📬 Get Vault Updates</button>
       <div id="substack-box" style="display: none;">
         <iframe src="https://rickyjarnagin.substack.com/embed" width="100%" height="320" style="border:1px solid #ccc; border-radius:4px;" frameborder="0" scrolling="no"></iframe>
@@ -205,5 +180,22 @@
         <div style="margin-bottom: 2rem;">
           <h3>💸 Become an Affiliate</h3>
           <p>Want to earn by sharing the Vault? Join our affiliate program and get paid when others unlock access.</p>
-          <a href="mailto:support@anchorstack.pro?subject=Affili
+          <a href="mailto:support@anchorstack.pro?subject=Affiliate" style="color: #6c5ce7; font-weight: bold;">Become an Affiliate →</a>
+        </div>
+        <div>
+          <h3>🤝 Collaboration Invitation</h3>
+          <p>Got something to share with the AnchorStack community? We're open to collabs, guest kits, or tools.</p>
+          <a href="mailto:support@anchorstack.pro?subject=Vault Collaboration Pitch" style="color: #6c5ce7; font-weight: bold;">Pitch your idea →</a>
+        </div>
+      </div>
+    </div> <!-- end main-products -->
+  </div> <!-- end vault-container -->
 
+  <script>
+    document.getElementById('substack-toggle').addEventListener('click', function () {
+      const box = document.getElementById('substack-box');
+      box.style.display = (box.style.display === 'none') ? 'block' : 'none';
+    });
+  </script>
+</body>
+</html>
