Fix: Completed broken Affiliate section in Vault

--- a/vault.html
+++ b/vault.html
@@ -207,5 +207,5 @@
         <div style="margin-bottom: 2rem;">
           <h3>💸 Become an Affiliate</h3>
           <p>Want to earn by sharing the Vault? Join our affiliate program and get paid when others unlock access.</p>
-          <a href="mailto:support@anchorstack.pro?subject=Affili
-
+          <a href="mailto:support@anchorstack.pro?subject=Affiliate Inquiry">Email us to Join the Program</a>
+</html>>
