Force update: vault.html refresh

--- a/vault.html
+++ b/vault.html
@@ -186,7 +186,7 @@
           <p class="price">$15</p>
         </a>
       </div>
-
+</div>
       <h2>🚀 Top Tier Access</h2>
       <div class="vault-grid">
         <a class="product-card tier-top" href="https://grafixartistry6.gumroad.com/l/gxpksf" target="_blank">
