Fix layout alignment and clean up Vault page

--- a/vault.html
+++ b/vault.html
@@ -41,6 +41,7 @@
       max-width: 360px;
     }
     .vault-grid {
+  align-items: stretch;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 1.5rem;
@@ -135,7 +136,9 @@
       Thank you for being a Vault Member. You're unlocking tools designed to bring clarity, momentum, and peace to your creative work.
     </div>
 
-    <a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/mbxcud" target="_blank">
+    <h2>🎁 Free Tier Access</h2>
+<div class="vault-grid">
+<a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/mbxcud" target="_blank">
   <span class="badge">Free</span>
   <img src="images/calm-clarity-kit.jpg" alt="Calm Clarity Kit">
   <h3>Calm Clarity Kit – 7-Day Edition</h3>
@@ -157,7 +160,9 @@
 </a>
 
 
-      <h2>⚡ Mid Tier Access</h2>
+     
+</div>
+<div> <h2>⚡ Mid Tier Access</h2>
       <div class="vault-grid">
         <a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/msenf" target="_blank">
           <span class="badge">New</span>
@@ -226,4 +231,7 @@
           <h3>💸 Become an Affiliate</h3>
           <p>Want to earn by sharing the Vault? Join our affiliate program and get paid when others unlock access.</p>
           <a href="mailto:support@anchorstack.pro?subject=Affiliate Inquiry">Email us to Join the Program</a>
-</html>>
+
+
+</body>
+</html>
