Quick edit to vault

--- a/vault.html
+++ b/vault.html
@@ -112,6 +112,18 @@
 </div>
 
 <h2 class="tier-heading">⚡ Mid Tier Access</h2>
+<section class="sprint-banner" style="background: #fff9c4; border: 1px solid #f4e04d; padding: 1.5rem; border-radius: 12px; margin: 3rem 0; text-align: center;">
+  <h2 style="margin-top: 0;">🚀 Featured Drop: The 30-Day Product Sprint</h2>
+  <p style="font-size: 1rem; max-width: 600px; margin: 0 auto;">
+    Launch your next digital product in 30 days — with clarity, speed, and zero fluff.
+    <br><strong>Free with Mid Tier Vault access.</strong> Stay 90 days to unlock a bonus worth $19.
+  </p>
+  <div style="margin-top: 1.5rem;">
+    <a href="/sprint.html" style="display: inline-block; background: #6c5ce7; color: white; padding: 0.75rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: bold;">Learn More</a>
+  </div>
+</section>
+
+
 <div class="vault-grid">
   <a class="product-card tier-mid" href="#" target="_blank">
     <span class="badge">New</span>
