Fix form redirect to use /welcome/ path

--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
     <p class="subhead">Join thousands of creators reclaiming clarity and momentum — one day at a time.</p>
 
     <div class="form-container">
-      <form name="focus-challenge"
-            method="POST"
-            data-netlify="true"
-            action="/welcome/index.html">
+    <form name="focus-challenge"
+      method="POST"
+      data-netlify="true"
+      action="/welcome/">
         <label for="name">First Name:</label>
         <input type="text" id="name" name="name" placeholder="Your first name" required />
 
