Add redirect to Formspree form

--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
   <label for="email">Email:</label>
   <input type="email" id="email" name="email" required>
 
-  <!-- Redirect after successful submission -->
+  <!-- 🔁 Add this line for redirect -->
   <input type="hidden" name="_redirect" value="/thank-you.html">
 
   <button type="submit">Start Challenge + Unlock Vault</button>
 </form>
+
 
 <p style="margin-top: 2rem;">Clarity. Momentum. Creation — without the noise.</p>
 </div>
